# DND5EBOT

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
doc/: manual.md  structure.md  开发.md
include/: character.hpp  combat.h  command.hpp  database.hpp  dice.h  dice_analyzer.hpp  magic.hpp
parser/: lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y
src/: command.cpp  dice.c  dice_analyzer.cpp  main.cpp
test/: test.cpp
